Fix Def. localhost

--- a/project-root/.env
+++ b/project-root/.env
@@ -11,4 +11,4 @@ DB_NAME=armonizzazione_percorsi
 JWT_SECRET=supersegreto
 
 # Variabile per il frontend
-REACT_APP_SERVER_URL=http://192.168.1.10:8080
+REACT_APP_SERVER_URL=http://localhost:8080
