--- a/project-root/backend/dockerfile
+++ b/project-root/backend/dockerfile
@@ -1,7 +1,9 @@
 FROM node:18
 WORKDIR /backend
-COPY package.json ./
-RUN apt-get update && apt-get install -y default-mysql-client
+COPY package*.json ./
+RUN npm install
+RUN apt-get update && apt-get install -y default-mysql-client \
+    && rm -rf /var/lib/apt/lists/*
 COPY . .
 EXPOSE 3001
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
