Aggiunta dashboard Admin/Docente

--- a/project-root/nginx.conf
+++ b/project-root/nginx.conf
@@ -5,14 +5,16 @@ http {
         listen 80;
         server_name _;
 
+        # SPA React
         location / {
             proxy_pass http://frontend_container:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
+        # Tutte le chiamate /api/... vanno al backend mantenendo /api
         location /api/ {
-            proxy_pass http://backend_container:3001/;
+            proxy_pass http://backend_container:3001;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
