--- a/project-root/backend/dockerfile
+++ b/project-root/backend/dockerfile
@@ -1,9 +1,10 @@
 FROM node:18
 WORKDIR /backend
-COPY package*.json ./
-RUN npm install
-RUN apt-get update && apt-get install -y default-mysql-client \
+RUN apt-get update \
+    && apt-get install -y default-mysql-client \
     && rm -rf /var/lib/apt/lists/*
+COPY package.json package-lock.json ./
+RUN npm ci
 COPY . .
 EXPOSE 3001
 CMD ["npm", "start"]
