--- a/project-root/frontend/dockerfile
+++ b/project-root/frontend/dockerfile
@@ -1,13 +1,26 @@
-FROM node:18-alpine
-WORKDIR /frontend
+# frontend/Dockerfile
 
-# Variabile come ARG
+# 1) Build della app React
+FROM node:18-alpine AS build-stage
+WORKDIR /app
+
 ARG REACT_APP_SERVER_URL
-ENV REACT_APP_SERVER_URL=$REACT_APP_SERVER_URL
+ENV REACT_APP_SERVER_URL=${REACT_APP_SERVER_URL}
 
-COPY package*.json ./
-RUN npm install
+COPY package.json package-lock.json ./
+RUN npm install --silent
+
 COPY . .
 RUN npm run build
-EXPOSE 3000
-CMD ["npm", "start"]
+
+# 2) Serve la build statica con Nginx
+FROM nginx:stable-alpine AS production-stage
+
+# Copia i file statici
+COPY --from=build-stage /app/build /usr/share/nginx/html
+
+# Configurazione custom per SPA fallback + proxy /api
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
