--- a/project-root/frontend/nginx.conf
+++ b/project-root/frontend/nginx.conf
@@ -5,7 +5,7 @@ server {
   root   /usr/share/nginx/html;
   index  index.html;
 
-  # Serve i file statici e, se non li trova, ricarica index.html
+  # File statici, se non li trova, ricarica index.html
   location / {
     try_files $uri $uri/ /index.html;
   }
